hphp/test/slow/readonly/as_expression_mutable_nonprim.php
<?hh
class Foo {
  public int $x = 4;
  public function getFoo(readonly Foo $x): Foo {
    return $x as Foo; // error
  }
}
